--- a/02.html
+++ b/02.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <title>我的第一個網頁</title>
+
     </head>
     <body>
-        <h1>Hello,world02!2411361006</h1>
-        <h2>Hello,world02!2411361006</h2>
-        <h3>Hello,world02!2411361006</h3>
-        <h4>Hello,world02!2411361006</h4>
-        <h5>Hello,world02!2411361006</h5>
-        <h6>Hello,world02!2411361006</h6>
+        <!--<h1>Hello world.h1</h1>-->
+        <h1>Hello world.h1</h1>
+        <!--功能是什麼-->
+        <h2>Hello world.h2</h2>
+        <h3>Hello world.h3</h3>
+        <h4>Hello world.h4</h4>
+        <h5>Hello world.h5</h5>
+        <h6>Hello world.h6</h6>
+        <article>
+            <nav>
+                全部都是導覽功能
+            </nav>
+            <section></section>
+            <section></section>
+        </article>
     </body>
 </html>
