--- a/01.html
+++ b/01.html
@@ -8,6 +8,7 @@
         </style>
         <script src="./01.js"></script>
         <script>
+            alert("這是一個對話視窗")
         </script>
     </head>
     <body>
@@ -15,3 +16,4 @@
     </body>
 
 </html>
+
