--- a/01.html
+++ b/01.html
@@ -2,18 +2,29 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>這是網頁的標題</title>
-        <style type="text/css">
-            h1 {font-size: 30px; color: blue}
-        </style>
-        <script src="./01.js"></script>
-        <script>
-            alert("這是一個對話視窗")
-        </script>
+        <title>我的網頁</title>
+        <style>
+            header, footer {clear: both; text-align: center}
+            nav {float: left;width: 20%; height: 200px; background:lightyellow;}
+            main {float: left;width: 60%; height: 200px; background:lightgray;}
+            aside {float: left;width: 20%; height: 200px; background:lightpink;}
+        </style> 
     </head>
     <body>
-        <h1>Hello World.</h1> 
+        <header>
+            <h1>頁首</h1>
+        </header>
+        <nav>
+            <h1>導覽列</h1>
+        </nav>
+        <main>
+            <h1>主要內容</h1>
+        </main>
+        <aside>
+            <h1>側邊欄</h1>
+        </aside>
+        <footer>
+            <h1>頁尾</h1>
+        </footer>
     </body>
-
 </html>
-
