--- a/0003.html
+++ b/0003.html
@@ -18,10 +18,40 @@
             <td width="75%" align="left">888888888</td>
         </tr>
         <tr>
-            <td width="75%" align="left">同期通一發票收執聯八位數號碼與上列號碼相同者獎金二版萬元整</td>
+            <td width="75%" align="left">同期通一發票收執聯八位數號碼與上列號碼相同者獎金二百萬元整</td>
         </tr>
         <tr>
             <td width="25%" rowspan="4" align="center">頭獎</td>
             <td width="75%" align="left">111111111</td>
         </tr>
+        <tr>
+            <td width="75%" align="left">222222222</td>
+        </tr>
+        <tr>
+            <td width="75%" align="left">333333333</td>
+        </tr>
+        <tr>
+            <td width="75%" align="left">同期通一發票收執聯八位數號碼與上列號碼相同者獎金二十萬元整</td>
+        </tr>
+        <tr>
+            <td width="25%" align="center">二獎</td>
+            <td width="75%" align="left">同期通一發票收執聯七位數號碼與上列號碼與頭獎中獎號碼末七位</td>
+        </tr>
+        <tr>
+            <td width="25%" align="center">三獎</td>
+            <td width="75%" align="left">同期通一發票收執聯六位數號碼與上列號碼與頭獎中獎號碼末六位</td>
+        </tr>
+        <tr>
+            <td width="25%" align="center">四獎</td>
+            <td width="75%" align="left">同期通一發票收執聯五位數號碼與上列號碼與頭獎中獎號碼末五位</td>
+        </tr>
+        <tr>
+            <td width="25%" align="center">五獎</td>
+            <td width="75%" align="left">同期通一發票收執聯四位數號碼與上列號碼與頭獎中獎號碼末四位</td>
+        </tr>
+        <tr>
+            <td width="25%" align="center">六獎</td>
+            <td width="75%" align="left">同期通一發票收執聯五位數號碼與上列號碼與頭獎中獎號碼末三位</td>
+        </tr>
+    </table>
 </body>
