--- a/profile.html
+++ b/profile.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>邱伊綸</title>
+  <title>個人簡介網頁</title>
   <style>
     h1 {color: blue;}
   </style>
@@ -16,4 +16,5 @@
     <p>聯絡我：<a href="mailto:s2411361006@ad1.nutc.edu.tw">s2411361006@ad1.nutc.edu.tw</a></p>
   </div>
 </body>
+
 </html>
