--- a/4.html
+++ b/4.html
@@ -168,7 +168,7 @@
     </div>
 
     <div class="card" onclick="openMap()">
-         光遇地圖介紹
+         光遇地圖介紹(內有影片)
     </div>
 
     <div class="card" onclick="openPhoto()">
@@ -180,7 +180,7 @@
 <div class="modal" id="mapModal">
     <div class="modal-content">
         <span class="close" onclick="closeMap()">✖</span>
-        <h3>地圖介紹(內有影片)</h3>
+        <h3>地圖介紹</h3>
 
 <div class="map-images">
     <div class="img-box" onclick="openVideo('遇境', '0.mp4')">
